test/parse/relaxed/bad/invalidheaderchar.cnf
comment
and an invalid char
